2021.??.??
  * Added support for ptpimg.me


2021.06.22
  * BHD: Fix autodetection of "Commentary" and "DualAudio" tags
  * BHD: Fix "Too much data for declared Content-Length" when submitting
    non-ASCII characters in mediainfo


2021.06.20.1
  * Fix "No such file or directory" when ~/.config/upsies doesn't exist


2021.06.20
  * Add support for BHD
  * bB: Add support for "Theatrical Cut" and "IMAX"
  * ReleaseInfo: Add support for "OAR" and "Open Matte"


2021.06.05
  * Switched to date-based version schema
  * Fixed getting IMDb info
  * screenshots: Added --output-directory/-o argument which defaults to the
    current working directory
  * scene-search: Report HTTP request error properly
  * scene-check: Ask user in case of HTTP request error
  * release-name: Go back to accepting anything, even with incomplete
    information
  * bB: Added --screenshots CLI argument and trackers.bb.screenshots config
    option to customize the number of screenshots to make


2021-05-17 0.3.1
  * id: Added support for "id:..." query in case search results are incomplete.
  * NBL: Mention --ignore-dupes in relevant error message.
  * bB: New --poster-file argument in case no poster is found.
  * bB: Fixed order of release info.
  * bB: Improve startup time for season packs with lots of tracks in each
    episode.


2021-05-07 0.3.0
  * Fixed: "Connection reset by peer"
  * Added support for tracker: bB
  * Renamed command: create-torrent -> torrent-create
  * Renamed command: add-torrent -> torrent-add
  * New command: scene-search: List scene release names
  * New command: scene-check: Identify release as scene and check if it was
    altered
  * New option: config.main.cache_directory specifies where *.upsies directories
    and other cache files are put (default: ~/.cache/upsies)
  * New option: config.main.max_cache_size specifies the maximum size of
    config.main.cache_directory before old files are removed