@@ -1,5 +1,6 @@
 2021.??.??
   * Added support for ptpimg.me
+  * bB: Added --anime option
 
 
 2021.06.22
